<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_label">"Cell Broadcast message"</string>
    <string name="sms_cb_settings">"Emergency alerts"</string>
    <string name="button_dismiss">"OK"</string>
    <string name="button_hide">"Hide"</string>
    <string name="no_cell_broadcasts">"There are no active alerts in your area. To change alert settings, Touch the Overflow icon in the top right corner and then touch Settings."</string>
    <string name="menu_preferences">"Settings"</string>
    <string name="menu_delete_all">"Delete all"</string>
    <string name="message_options">"Message options"</string>
    <string name="menu_view_details">"View details"</string>
    <string name="menu_delete">"Delete broadcast"</string>
    <string name="view_details_title">"Alert details"</string>
    <string name="confirm_delete_broadcast">"Delete this broadcast?"</string>
    <string name="confirm_dialog_title_deleteall">"Delete All"</string>
    <string name="confirm_dialog_title_delete">"Delete"</string>
    <string name="confirm_delete_all_broadcasts">"All Cell Broadcast messages and alerts will be deleted."</string>
    <string name="button_delete">"OK"</string>
    <string name="button_cancel">"Cancel"</string>
    <string name="etws_earthquake_warning">"Earthquake warning"</string>
    <string name="etws_tsunami_warning">"Tsunami warning"</string>
    <string name="etws_earthquake_and_tsunami_warning">"Earthquake and tsunami warning"</string>
    <string name="etws_test_message">"ETWS test message"</string>
    <string name="etws_other_emergency_type">"Emergency warning"</string>
    <string name="cmas_presidential_level_alert">"Presidential alert"</string>
    <string name="cmas_extreme_alert">"Emergency alert: Extreme"</string>
    <string name="cmas_severe_alert">"Emergency alert: Severe"</string>
    <string name="cmas_amber_alert">"Child abduction (Amber alert)"</string>
    <string name="cmas_required_monthly_test">"Emergency alert monthly test"</string>
    <string name="cmas_exercise_alert">"Emergency alert (exercise)"</string>
    <string name="cmas_operator_defined_alert">"Emergency alert (operator)"</string>
    <string name="pws_other_message_identifiers">"Emergency alert"</string>
    <string name="cb_other_message_identifiers">"Cell Broadcast"</string>
    <string name="cmas_spanish_presidential_level_alert">"Presidential alert"</string>
    <string name="cmas_spanish_extreme_alert">"Emergency alert: Extreme"</string>
    <string name="cmas_spanish_severe_alert">"Emergency alert: Severe"</string>
    <string name="cmas_spanish_amber_alert">"Child abduction (Amber alert)"</string>
    <string name="cmas_spanish_required_monthly_test">"Emergency alert monthly test"</string>
    <string name="cmas_spanish_exercise_alert">"Emergency alert (exercise)"</string>
    <string name="cmas_spanish_operator_defined_alert">"Emergency alert (operator)"</string>
    <string name="emergency_alert_settings_title">"Emergency alerts"</string>
    <string name="enable_emergency_alerts_title">"Turn on notifications"</string>
    <string name="enable_emergency_alerts_summary">"Display emergency alert broadcasts"</string>
    <string name="alert_sound_duration_title">"Alert sound duration"</string>
    <string name="alert_sound_duration_summary"/>
    <string name="alert_reminder_interval_title">"Alert reminder"</string>
    <string name="alert_reminder_interval_summary"/>
    <string name="enable_alert_speech_title">"Speak alert message"</string>
    <string name="enable_alert_speech_summary">"Use text-to-speech to speak emergency alert messages"</string>
    <string name="category_etws_settings_title">"ETWS settings"</string>
    <string name="enable_etws_test_alerts_title">"Show ETWS test broadcasts"</string>
    <string name="enable_etws_test_alerts_summary">"Display test broadcasts for Earthquake Tsunami Warning System"</string>
    <string name="enable_cmas_extreme_threat_alerts_title">"Show extreme threats"</string>
    <string name="enable_cmas_extreme_threat_alerts_summary">"Display alerts for extreme threats to life and property"</string>
    <string name="enable_cmas_severe_threat_alerts_title">"Show severe threats"</string>
    <string name="enable_cmas_severe_threat_alerts_summary">"Display alerts for severe threats to life and property"</string>
    <string name="enable_cmas_amber_alerts_title">"Show AMBER alerts"</string>
    <string name="enable_cmas_amber_alerts_summary">"Display child abduction emergency bulletins (AMBER alert)"</string>
    <string name="enable_cmas_spanish_language_alerts_title">"Spanish language"</string>
    <string name="enable_cmas_spanish_language_alerts_summary">"Display alerts for Spanish language messages"</string>
    <string name="enable_cmas_test_alerts_title">"Show CMAS test broadcasts"</string>
    <string name="enable_cmas_test_alerts_summary">"Display test broadcasts for Commercial Mobile Alert System"</string>
    <string name="enable_alert_vibrate_title">"Vibrate"</string>
    <string name="enable_alert_vibrate_summary">"Vibration alert on"</string>
    <string name="enable_alert_audio_title">"Audio"</string>
    <string name="enable_alert_audio_summary">"Audio on alert"</string>
    <string name="category_brazil_settings_title">"Settings for Brazil"</string>
    <string name="category_india_settings_title">"Settings for India"</string>
    <string name="enable_channel_50_alerts_title">"Show channel 50 broadcasts"</string>
    <string name="enable_channel_50_alerts_summary">"Channel 50 is used in Brazil for area update information"</string>
    <string name="enable_channel_60_alerts_title">"Show channel 60 broadcasts"</string>
    <string name="enable_channel_60_alerts_summary">"Channel 60 is used in India for Operator specific information"</string>
    <string name="category_dev_settings_title">"Developer options"</string>
    <string name="cmas_category_heading">"Alert Category:"</string>
    <string name="cmas_category_geo">"Geophysical"</string>
    <string name="cmas_category_met">"Meteorological"</string>
    <string name="cmas_category_safety">"Safety"</string>
    <string name="cmas_category_security">"Security"</string>
    <string name="cmas_category_rescue">"Rescue"</string>
    <string name="cmas_category_fire">"Fire"</string>
    <string name="cmas_category_health">"Health"</string>
    <string name="cmas_category_env">"Environmental"</string>
    <string name="cmas_category_transport">"Transportation"</string>
    <string name="cmas_category_infra">"Infrastructure"</string>
    <string name="cmas_category_cbrne">"Chemical/Biological/Nuclear/Explosive"</string>
    <string name="cmas_category_other">"Other"</string>
    <string name="cmas_response_heading">"Response type:"</string>
    <string name="cmas_response_shelter">"Shelter"</string>
    <string name="cmas_response_evacuate">"Evacuate"</string>
    <string name="cmas_response_prepare">"Prepare"</string>
    <string name="cmas_response_execute">"Execute"</string>
    <string name="cmas_response_monitor">"Monitor"</string>
    <string name="cmas_response_avoid">"Avoid"</string>
    <string name="cmas_response_assess">"Assess"</string>
    <string name="cmas_response_none">"None"</string>
    <string name="cmas_severity_heading">"Severity:"</string>
    <string name="cmas_severity_extreme">"Extreme"</string>
    <string name="cmas_severity_severe">"Severe"</string>
    <string name="cmas_urgency_heading">"Urgency:"</string>
    <string name="cmas_urgency_immediate">"Immediate"</string>
    <string name="cmas_urgency_expected">"Expected"</string>
    <string name="cmas_certainty_heading">"Certainty:"</string>
    <string name="cmas_certainty_observed">"Observed"</string>
    <string name="cmas_certainty_likely">"Likely"</string>
    <string name="delivery_time_heading">"Received:"</string>
    <string name="notification_multiple">"<xliff:g id="count">%s</xliff:g> unread alerts."</string>
    <string name="notification_multiple_title_cb">"New alerts"</string>
    <string name="notification_multiple_title_cmas">"Emergency Alerts"</string>
    <string name="show_cmas_opt_out_summary">"Show an opt-out dialog after displaying the first CMAS alert (other than Presidential Alert)."</string>
    <string name="show_cmas_opt_out_title">"Show opt-out dialog"</string>
    <string name="cmas_opt_out_dialog_text">"You are currently receiving Emergency Alerts. Continue receiving them?"</string>
    <string name="cmas_opt_out_button_yes">"Yes"</string>
    <string name="cmas_opt_out_button_no">"No"</string>
    <string-array name="alert_sound_duration_entries">
      <item>"2 seconds"</item>
      <item>"4 seconds"</item>
      <item>"6 seconds"</item>
      <item>"8 seconds"</item>
      <item>"10 seconds"</item>
    </string-array>
    <string-array name="alert_sound_duration_values">
      <item>2</item>
      <item>4</item>
      <item>6</item>
      <item>8</item>
      <item>10</item>
    </string-array>
    <string-array name="alert_reminder_interval_entries">
      <item>"Once"</item>
      <item>"Every 2 minutes"</item>
      <item>"Every 15 minutes"</item>
      <item>"Off"</item>
    </string-array>
    <string-array name="alert_reminder_interval_values">
      <item>1</item>
      <item>2</item>
      <item>15</item>
      <item>0</item>
    </string-array>
    <string name="cell_broadcast_sms_title">"Cell Broadcast"</string>
    <string name="category_brazil_settings_title_sub">"Settings for Brazil"</string>
    <string name="cb_settings_sel_sub">"Select SIM card"</string>
    <string name="summary_manage_subscriptions">"Manage Cell Broadcast settings of each SIMs"</string>
    <string name="select_subscription_title">"Select SIM card"</string>
    <string name="subscription1_title">"SIM 1"</string>
    <string name="subscription2_title">"SIM 2"</string>
    <string name="cbsetting">"Cell Broadcast"</string>
    <string name="summary_cbsetting">"Set Cell Broadcast channel"</string>
    <string name="title_receive_channel_list">"Select all channels"</string>
    <string name="title_channel_list">"Channel list"</string>
    <string name="summary_channel_list">"Select or not select all channels"</string>
    <string name="title_add_channel">"Add channel"</string>
    <string name="summary_add_channel">"Add channel name and channel index"</string>
    <string name="channel_name">"Channel name (1-10 characters)"</string>
    <string name="channel_index">"Channel number (0~999)"</string>
    <string name="channelEx_index">"Channel number (0-65534)"</string>
    <string name="pref_summary_enable_cmas_rmt_alerts">"Display alerts for required monthly test"</string>
    <string name="pref_title_enable_cmas_rmt_alerts">"Show RMT alerts"</string>
    <string name="pref_summary_enable_cmas_exercise_alerts">"Display alerts for exercise messages"</string>
    <string name="pref_title_enable_cmas_exercise_alerts">"Show exercise alerts"</string>
    <string name="enable_cmas_presidential_alerts_summary">"Presidential alerts are always displayed"</string>
    <string name="enable_cmas_presidential_alerts_title">"Presidential"</string>
    <string name="pref_preview_cmas_alert">"Preview notification"</string>
    <string name="pref_summary_preview_cmas_alert_tone">"Preview emergency alert tone"</string>
    <string name="pref_title_preview_cmas_alert_tone">"Alert tone"</string>
    <string name="pref_summary_preview_cmas_vibration">"Preview emergency alert vibration"</string>
    <string name="pref_title_preview_cmas_vibration">"Vibration"</string>
    <string name="emergency_alert_default" translatable="false">EMERGENCY ALERT / ALERTE D’URGENCE</string>
    <string name="wpas_test_alert">"WPAS test alerts"</string>
    <string name="other_alert_settings_title">"Other settings"</string>
    <string name="wpas_alerts_inbox">"Alert inbox"</string>
    <string name="wpas_alerts_inbox_summary">"WPAS alert messages"</string>
</resources>