<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2011 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- General and CMAS emergency alert settings. -->
    <PreferenceCategory android:title="@string/pws_other_message_identifiers"
                        android:key="category_alert_settings">

    <com.android.cellbroadcastreceiver.NormalPreference
            android:defaultValue="true"
            android:key="enable_wpas_alerts"
            android:summary="@string/emergency_alert_default"
            android:title="@string/emergency_alert_default"
             />
        <!-- add by liang.zhang for Defect 6272370 at 2018-05-04 begin -->
        <com.android.cellbroadcastreceiver.NormalPreference
            android:persistent="false"
            android:key="wpas_alerts_inbox"
            android:summary="@string/wpas_alerts_inbox_summary"
            android:title="@string/wpas_alerts_inbox"
        />
        <!-- add by liang.zhang for Defect 6272370 at 2018-05-04 end -->

        <!-- [BUGFIX]-Add-BEGIN by TCTNB.yugang.jia, 09/11/2013, FR-516039, CMAS Ergo -->
        <com.android.cellbroadcastreceiver.NormalPreference
                    android:key="pref_key_presidential_alert"
                    android:persistent="false"
                    android:summary="@string/enable_cmas_presidential_alerts_summary"
                    android:title="@string/enable_cmas_presidential_alerts_title" />
        <!-- [BUGFIX]-Add-END by TCTNB.yugang.jia -->
        <!-- Enable CMAS Extreme Threat alerts -->
        <com.android.cellbroadcastreceiver.NormalCheckBoxPreference
                            android:defaultValue="true"
                            android:key="enable_cmas_extreme_threat_alerts"
                            android:summary="@string/enable_cmas_extreme_threat_alerts_summary"
                            android:title="@string/enable_cmas_extreme_threat_alerts_title" />

        <!-- Enable CMAS Severe Threat alerts -->
        <com.android.cellbroadcastreceiver.NormalCheckBoxPreference
                            android:defaultValue="true"
                            android:key="enable_cmas_severe_threat_alerts"
                            android:summary="@string/enable_cmas_severe_threat_alerts_summary"
                            android:title="@string/enable_cmas_severe_threat_alerts_title" />

        <!-- Enable CMAS AMBER alerts -->
        <com.android.cellbroadcastreceiver.NormalCheckBoxPreference
                            android:defaultValue="true"
                            android:key="enable_cmas_amber_alerts"
                            android:summary="@string/enable_cmas_amber_alerts_summary"
                            android:title="@string/enable_cmas_amber_alerts_title" />

        <com.android.cellbroadcastreceiver.NormalCheckBoxPreference
                            android:defaultValue="false"
                            android:key="enable_wpas_test_alerts"
                            android:summary="@string/wpas_test_alert"
                            android:title="@string/wpas_test_alert" />

        <!-- [BUGFIX]-MOD-BEGIN by bin.xue for PR1077032 -->
        <!-- Enable CMAS Spanish Language alerts -->
        <com.android.cellbroadcastreceiver.NormalCheckBoxPreference
                            android:defaultValue="false"
                            android:key="enable_cmas_spanish_language_alerts"
                            android:summary="@string/enable_cmas_spanish_language_alerts_summary"
                            android:title="@string/enable_cmas_spanish_language_alerts_title" />
        <!-- [BUGFIX]-MOD-END by bin.xue -->

        <!-- [BUGFIX]-MOD-BEGIN by TCTNB.yugang.jia, 09/11/2013, FR-516039, CMAS Ergo -->
        <com.android.cellbroadcastreceiver.NormalCheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_enable_cmas_rmt_alerts"
            android:summary="@string/pref_summary_enable_cmas_rmt_alerts"
            android:title="@string/pref_title_enable_cmas_rmt_alerts" />

        <com.android.cellbroadcastreceiver.NormalCheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_enable_cmas_exercise_alerts"
            android:summary="@string/pref_summary_enable_cmas_exercise_alerts"
            android:title="@string/pref_title_enable_cmas_exercise_alerts" />
<!-- [BUGFIX]-MOD-BEGIN by TCTNB.ke.meng, 04/18/2014, FR-636168, CMAS Ergo -->
        <com.android.cellbroadcastreceiver.NormalCheckBoxPreference
                            android:defaultValue="true"
                            android:key="enable_emergency_alerts"
                            android:summary="@string/enable_emergency_alerts_summary"
                            android:title="@string/enable_emergency_alerts_title" />
        <!-- [BUGFIX]-MOD-BEGIN by TCTNB.yugang.jia, 09/11/2013, FR-516039, CMAS Ergo -->

        <com.android.cellbroadcastreceiver.WpasListPreference android:key="alert_sound_duration"
                        android:title="@string/alert_sound_duration_title"
                        android:entries="@array/alert_sound_duration_entries"
                        android:entryValues="@array/alert_sound_duration_values"
                        android:defaultValue="4"
                        android:dialogTitle="@string/alert_sound_duration_title" />

        <com.android.cellbroadcastreceiver.WpasListPreference android:key="alert_reminder_interval"
                        android:title="@string/alert_reminder_interval_title"
                        android:entries="@array/alert_reminder_interval_entries"
                        android:entryValues="@array/alert_reminder_interval_values"
                        android:dialogTitle="@string/alert_reminder_interval_title" />

        <com.android.cellbroadcastreceiver.NormalCheckBoxPreference
                            android:defaultValue="true"
                            android:key="enable_alert_speech"
                            android:summary="@string/enable_alert_speech_summary"
                            android:title="@string/enable_alert_speech_title" />

        <!-- [FEATURE]-MOD-BEGIN by TCTNB.yugang.jia, 09/11/2013, FR-516039, let user to preview the CMAS alert tone and vibration -->
        <com.android.cellbroadcastreceiver.NormalCheckBoxPreference
                            android:defaultValue="true"
                            android:key="enable_alert_vibrate"
                            android:summary="@string/enable_alert_vibrate_summary"
                            android:title="@string/enable_alert_vibrate_title" />
        <!-- begin: aiyan-978029-add audio on/off for T-Mobile requirement -->
        <com.android.cellbroadcastreceiver.NormalCheckBoxPreference
            android:defaultValue="true"
            android:key="enable_alert_audio"
            android:summary="@string/enable_alert_audio_summary"
            android:title="@string/enable_alert_audio_title" />
        <!-- end: aiyan-978029-add audio on/off for T-Mobile requirement -->

       </PreferenceCategory>
       <PreferenceCategory android:title="@string/pref_preview_cmas_alert"
                        android:key="category_cmas_alert_preview">
         <com.android.cellbroadcastreceiver.NormalPreference
                      android:key="pref_key_preview_cmas_alert_tone"
                      android:persistent="false"
                      android:summary="@string/pref_summary_preview_cmas_alert_tone"
                      android:title="@string/pref_title_preview_cmas_alert_tone" />
         <com.android.cellbroadcastreceiver.NormalPreference
                      android:key="pref_key_preview_cmas_vibration"
                      android:persistent="false"
                      android:summary="@string/pref_summary_preview_cmas_vibration"
                      android:title="@string/pref_title_preview_cmas_vibration" />
       <!-- [FEATURE]-MOD-END by TCTNB.yugang.jia -->
       </PreferenceCategory>

       <PreferenceCategory android:title="@string/other_alert_settings_title"
                        android:key="other_alert_settings">
         <com.android.cellbroadcastreceiver.NormalCheckBoxPreference
                            android:defaultValue="true"
                            android:key="enable_alert_speech_ex"
                            android:summary="@string/enable_alert_speech_summary"
                            android:title="@string/enable_alert_speech_title" />
        </PreferenceCategory>
    <!-- Emergency alert settings for ETWS. -->
    <PreferenceCategory android:title="@string/category_etws_settings_title"
                        android:key="category_etws_settings">

        <com.android.cellbroadcastreceiver.NormalCheckBoxPreference
                            android:defaultValue="@bool/def_etws_test_alert_default_on"
                            android:key="enable_etws_test_alerts"
                            android:summary="@string/enable_etws_test_alerts_summary"
                            android:title="@string/enable_etws_test_alerts_title" />

    </PreferenceCategory>

    <!-- [FEATURE]-Del-BEGIN by TCTNB.yugang.jia, 09/11/2013, FR-516039, use RMT and Exercise to replace it -->
      <PreferenceCategory android:title="@string/category_brazil_settings_title"
                        android:key="category_brazil_settings"> -->
    <!-- Default value is true for Brazil. This preference is ignored and hidden
         unless the boolean "show_brazil_settings" is set to true in config.xml. -->
       <com.android.cellbroadcastreceiver.NormalCheckBoxPreference
                        android:defaultValue="true"
                        android:key="enable_channel_50_alerts"
                        android:summary="@string/enable_channel_50_alerts_summary"
                        android:title="@string/enable_channel_50_alerts_title" />

    </PreferenceCategory>
    <!-- This preference is ignored and hidden
         unless the boolean "show_india_settings" is set to true in config.xml. -->
    <PreferenceCategory android:title="@string/category_india_settings_title"
                        android:key="category_india_settings">

        <com.android.cellbroadcastreceiver.NormalCheckBoxPreference
                            android:key="enable_channel_60_alerts"
                            android:summary="@string/enable_channel_60_alerts_summary"
                            android:title="@string/enable_channel_60_alerts_title" />

    </PreferenceCategory>

    <!-- Only visible when Developer options toggle is enabled in Settings. -->
     <PreferenceCategory android:title="@string/category_dev_settings_title"
                        android:key="category_dev_settings">

        <com.android.cellbroadcastreceiver.NormalCheckBoxPreference
                            android:defaultValue="false"
                            android:key="enable_cmas_test_alerts"
                            android:summary="@string/enable_cmas_test_alerts_summary"
                            android:title="@string/enable_cmas_test_alerts_title" />

        <com.android.cellbroadcastreceiver.NormalCheckBoxPreference
                            android:defaultValue="true"
                            android:key="show_cmas_opt_out_dialog"
                            android:summary="@string/show_cmas_opt_out_summary"
                            android:title="@string/show_cmas_opt_out_title" />
    </PreferenceCategory>
    <!-- [FEATURE]-MOD-END by TCTNB.ke.meng -->

</PreferenceScreen>
