<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 Tcl Corporation Limited -->
<!--
/*
 * Copyright (C) 2011 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/emergency_alert_settings_title"
                        android:key="category_develop_settings">

        <com.android.cellbroadcastreceiver.NormalCheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_enable_cmas_rmt_alerts"
            android:summaryOff="Disabled"
            android:summaryOn="Enabled"
            android:title="@string/pref_title_enable_cmas_rmt_alerts" />

        <com.android.cellbroadcastreceiver.NormalCheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_enable_cmas_exercise_alerts"
            android:summaryOff="Disabled"
            android:summaryOn="Enabled"
            android:title="@string/pref_title_enable_cmas_exercise_alerts" />

       </PreferenceCategory>

</PreferenceScreen>
